[package]
name = "deeprox"
version = "0.1.0"
authors = ["Ben Lichtman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.18"
openssl = "0.10"
webpki-roots = "0.19.0"
rustls = "0.17"
rand = "0.7"
async-std = { version = "1.6.0", features = ["attributes"] }
async-tls = "0.7.0"
async-h1 = { git = "https://github.com/Ben-Lichtman/async-h1.git" }
http-types = "2.0.1"
piper = "0.1.2"
