[package]
name = "deeprox"
version = "0.1.1"
authors = ["Ben Lichtman"]
edition = "2018"
description = "TLS intercepting web proxy inspired by Burp Suite and Mitmproxy"
repository = "https://github.com/Ben-Lichtman/deeprox"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0.18"
openssl = "0.10"
webpki-roots = "0.19.0"
rustls = "0.17"
rand = "0.7"
async-std = { version = "1.6.0", features = ["attributes"] }
async-tls = "0.7.0"
async-h1 = "2.1.2"
http-types = "2.0.1"
async-dup = "1.1.0"
futures = "0.3.5"
base64 = "0.12.3"
lol_html = "0.2.0"
structopt = "0.3.16"
